hamburger icon removed when desktop

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             </ul>
 
-            <div class="hamburger-btn fas">
+            <div class="hamburger-btn fas" id="hamburger-btn">
             </div>
 
         </nav>
